--- a/Engine Charly/Engine Charly/Engine Charly.vcxproj
+++ b/Engine Charly/Engine Charly/Engine Charly.vcxproj
@@ -14,6 +14,9 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="src\Engine\Core.h" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{3E5661B1-AA16-DDE7-7351-2665DFD021C4}</ProjectGuid>
     <IgnoreWarnCompileDuplicatedFilename>true</IgnoreWarnCompileDuplicatedFilename>
