--- a/Engine Charly/Engine Charly/Engine Charly.vcxproj.filters
+++ b/Engine Charly/Engine Charly/Engine Charly.vcxproj.filters
@@ -15,8 +15,8 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Engine Charly.cpp">
-      <Filter>Archivos de origen</Filter>
-    </ClCompile>
+    <ClInclude Include="src\Engine\Core.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
