--- a/EngineCharly/EngineCharly/EngineCharly.vcxproj.filters
+++ b/EngineCharly/EngineCharly/EngineCharly.vcxproj.filters
@@ -4,6 +4,9 @@
     <Filter Include="Engine">
       <UniqueIdentifier>{DBC7D3B0-C769-FE86-B024-12DB9C6585D7}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Engine\Event">
+      <UniqueIdentifier>{6C812495-58E4-B339-016A-ECEFEDAB7FBC}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Engine\Aplication.h">
@@ -15,11 +18,23 @@
     <ClInclude Include="src\Engine\EntryPoint.h">
       <Filter>Engine</Filter>
     </ClInclude>
+    <ClInclude Include="src\Engine\Event\ApplicationEvent.h">
+      <Filter>Engine\Event</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Engine\Event\Event.h">
+      <Filter>Engine\Event</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Engine\Event\KeyEvent.h">
+      <Filter>Engine\Event</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Engine\Event\MouseEvent.h">
+      <Filter>Engine\Event</Filter>
+    </ClInclude>
     <ClInclude Include="src\Engine\Log.h">
       <Filter>Engine</Filter>
     </ClInclude>
     <ClInclude Include="src\EngineCharly.h" />
-    <ClInclude Include="src\Engine\Event\Event.h" />
+    <ClInclude Include="src\charlypch.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Engine\Aplication.cpp">
@@ -28,5 +43,6 @@
     <ClCompile Include="src\Engine\Log.cpp">
       <Filter>Engine</Filter>
     </ClCompile>
+    <ClCompile Include="src\charlypch.cpp" />
   </ItemGroup>
 </Project>
