--- a/EngineCharly/EngineCharly/EngineCharly.vcxproj
+++ b/EngineCharly/EngineCharly/EngineCharly.vcxproj
@@ -80,7 +80,7 @@
       <PrecompiledHeaderFile>charlypch.h</PrecompiledHeaderFile>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>CHARLY_PLATFORM_WINDOWS;CHARLY_BUILD_DLL;CHARLY_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>src;..;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>src;vendor\GLFW\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <Optimization>Disabled</Optimization>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
@@ -157,11 +157,13 @@
     <ClInclude Include="src\Engine\Log.h" />
     <ClInclude Include="src\Engine\Window.h" />
     <ClInclude Include="src\EngineCharly.h" />
+    <ClInclude Include="src\Platform\Windows\WindowsWindow.h" />
     <ClInclude Include="src\charlypch.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Engine\Aplication.cpp" />
     <ClCompile Include="src\Engine\Log.cpp" />
+    <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp" />
     <ClCompile Include="src\charlypch.cpp">
       <PrecompiledHeader>Create</PrecompiledHeader>
     </ClCompile>
